Fix T78073 EEVEE: new motion blur and overscan produce wrong render

This was caused by the override viewport size not being maintained after
DRW_cache_restart().

Also this fixes issue with the inv_size not being updated correctly.